cmake_minimum_required(VERSION  3.10)

project(MultiThreading)


add_subdirectory("samples/summation")
add_subdirectory("samples/racecheck")
add_subdirectory("samples/tcp_client_sample")
add_subdirectory("samples/tcp_server_sample")
add_subdirectory("modules/tcp_client")
add_subdirectory("modules/tcp_server")
add_subdirectory("samples/tcp_client_class_example")
add_subdirectory("samples/tcp_server_class_example")